--- a/styles/style.css
+++ b/styles/style.css
@@ -259,21 +259,21 @@ header nav div ul li details ul li:nth-child(n+2){
 		padding: 13px 25px;
 	}
 
-	#nav-menu ul:nth-of-type(3) li:nth-of-type(2) a{
+	#nav-menu ul:last-of-type li:last-of-type a{
 		color: #006bae;
 		text-decoration: underline;
 	}
 }
 
-/*********************/
-/* STYLING VOOR MAIN */
-/*********************/
+/***************************/
+/* STYLING VOOR HOMEPAGINA */
+/***************************/
 
 main{
 	margin-top: 48px;
 }
 
-h1{
+.home h1{
 	clip: rect(0 0 0 0);
   	clip-path: inset(50%);
 	height: 1px;
@@ -283,7 +283,7 @@ h1{
 	width: 1px;
 }
 
-main ul{
+.home ul{
 	list-style-type: none;
 	width: 100%;
 	overflow-x: auto;
@@ -296,7 +296,7 @@ main ul{
 	scroll-marker-group: after;
 }
 
-main ul li::scroll-marker{
+.home ul li::scroll-marker{
 	content: '';
 	height: 0.5em;
 	width: 0.5em;
@@ -305,21 +305,21 @@ main ul li::scroll-marker{
 	border-radius: 50%;
 }
 
-main ul li::scroll-marker:target-current{
+.home ul li::scroll-marker:target-current{
 	opacity: 1;
 }
 
-main ul::scroll-marker-group{
+.home ul::scroll-marker-group{
 	display: flex;
 	justify-content: center;
 	gap: 0.5em;
 }
 
-main ul::-webkit-scrollbar{
+.home ul::-webkit-scrollbar{
 	display: none;
 }
 
-main ul::scroll-button(right), main ul::scroll-button(left){
+.home ul::scroll-button(right), .home ul::scroll-button(left){
 	content: '>';
 	border: none;
 	background-color: #ffbc0d;
@@ -337,18 +337,18 @@ main ul::scroll-button(right), main ul::scroll-button(left){
 	transform: translateY(5px);
 }
 
-main ul::scroll-button(left){
+.home ul::scroll-button(left){
 	content: '<';
 	position-area: bottom center;
 	translate: -200%;
 }
 
-main ul::scroll-button(right):disabled, main ul::scroll-button(left):disabled{
+.home ul::scroll-button(right):disabled, .home ul::scroll-button(left):disabled{
 	opacity: 50%;
 	cursor: auto;
 }
 
-main ul li{
+.home ul li{
 	width: 100%;
 	flex: 0 0 27.1em;
 	padding: 1em;
@@ -357,7 +357,7 @@ main ul li{
     border-radius: 0 0 .25rem .25rem;
 }
 
-main ul li img{
+.home ul li img{
 	object-fit: cover;
     height: auto;
     width: 100%;
@@ -365,7 +365,7 @@ main ul li img{
     background-size: auto auto;
 }
 
-main ul li a{
+.home ul li a{
 	min-height: 3rem;
     min-width: 9rem;
     line-height: 1.25rem;
@@ -380,16 +380,16 @@ main ul li a{
     text-align: center;
 }
 
-main ul li a, main ul li p, main ul li h2{
+.home ul li a, .home ul li p, .home ul li h2{
 	margin: 15px 25px;
 }
 
-main section{
+.home section{
 	margin-top: 100px;
 	padding: 0 12px;
 }
 
-main section a{
+.home section a{
 	min-height: 3rem;
     min-width: 9rem;
     line-height: 1.25rem;
@@ -404,24 +404,298 @@ main section a{
     text-align: center;
 }
 
-main section img{
+.home section img{
 	width: 100%;
 }
 
-main section h2, main section p, main section a{
+.home section h2, .home section p, .home section a{
 	margin: 13px;
 }
 
 @media (max-width: 769px){
-	main ul li{
+	.home ul li{
 		flex: 0 0 100%;
 	}
 }
 
 @media (min-width: 768px){
-	main article{
+	.home article{
 		display: flex;
 	}
+}
+
+/*********************/
+/* STYLING VOOR COLA */
+/*********************/
+
+.cola h1{
+	text-align: center;
+	font-size: 36px;
+    line-height: 40px;
+    letter-spacing: -.14px;
+    overflow-wrap: break-word;
+	margin: 0;
+}
+
+.cola section:first-of-type div > p:first-of-type {
+	text-align: center;
+	font-size: 20px;
+	margin-bottom: 20px;
+}
+
+.cola section:first-of-type div > p:nth-of-type(2) {
+	text-align: center;
+	font-weight: bold;
+	font-size: 15px;
+}
+
+.cola section:first-of-type div > p:nth-of-type(3) {
+	font-size: 14px;
+	line-height: 1.6;
+	margin: 1em;
+	text-align: center;
+}
+
+.cola section:first-of-type ul li p {
+	font-size: 12px;
+	text-align: center;
+}
+
+.cola section:first-of-type ul li button{
+	box-shadow: 0 .125rem .125rem 0 rgba(0, 0, 0, .16);
+    border: 1px solid #6f6f6f;
+    border-radius: 100%;
+    text-align: center;
+    display: flex;
+    width: 44px;
+    height: 44px;
+    margin-bottom: 4px;
+    justify-content: center;
+    align-items: center;
+	background-color: white;
+	cursor: pointer;
+}
+
+.cola section:first-of-type ul li{
+	margin: 0 0.75em;
+}
+
+.cola section:first-of-type ul{
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+	display: flex;
+	justify-content: center;
+}
+
+.cola section:first-of-type img {
+	width: 100%;
+}
+
+.cola h2{
+	font-size: 28px;
+	text-align: center;
+	margin-top: 3em;
+}
+
+.cola details{
+    border-top: 1px solid #cecece;
+	border-bottom: 1px solid #cecece; 
+	padding: 1em 0;
+}
+
+.cola details:first-of-type{
+	border-bottom: 0px;
+}
+
+.cola summary {
+	font-weight: bold;
+	position: relative;
+	margin: 8px 25px;
+	font-size: 18px;
+	anchor-name: --summary;
+
+	&::marker {
+		content: "";
+	}
+
+	&::before, &::after {
+		content: "";
+		border-block-start: 2px solid black;
+		height: 0;
+		width: 1.1rem;
+		
+		/* Positions the lines */
+		inset-block-start: 50%;
+		inset-inline-end: 0;
+		
+		/* Anchor the shape to the summary */
+		position: absolute;
+		position-anchor: --summary;
+		position-area: top end;
+	}
+
+	/* Rotate just the ::after line to create a "+"" shape */
+	&::after {
+		transform: rotate(90deg);
+		transform-origin: 50%;
+	}
+}
+
+.cola details[open] summary::after {
+	transform: rotate(0deg);
+}
+
+.cola details:first-of-type ul{
+	list-style-type: none;
+	padding: 0;
+}
+
+.cola details:first-of-type p:first-of-type{
+	font-size: 28px;
+    line-height: 1.2;
+    font-weight: lighter;
+}
+
+.cola details:first-of-type p:last-of-type{
+	font-size: 12px;
+}
+
+.cola details:first-of-type p{
+	margin: 0;
+	text-align: center;
+}
+
+.cola details:first-of-type ul{
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	grid-template-rows: auto auto;
+	gap: 1rem;     
+	margin: 2em 0;
+}
+
+.cola details:first-of-type ul li:nth-child(1){
+	grid-column: 1;
+	grid-row: 1;
+}
+
+.cola details:first-of-type ul li:nth-child(2){
+	grid-column: 2;
+	grid-row: 1;
+}
+
+.cola details:first-of-type ul li:nth-child(3){
+	grid-column: 1 / span 2;;
+	grid-row: 2;
+}
+
+table {
+	max-width: 500px;
+	border-collapse: collapse;
+	width: 100%;
+	margin: 10px 0;
+}
+
+table caption {
+	text-align: left;
+	font-weight: bold;
+	margin-bottom: 10px;
+	font-size: 18px;
+}
+
+table th, 
+table td {
+	border-bottom: 1px solid #ddd;
+	padding: 10px;
+	text-align: left;
+	font-size: 14px;
+}
+
+table th {
+	background-color: #f9f9f9;
+	font-weight: 600;
+}
+
+table td:last-child,
+table th:last-child {
+	text-align: right;
+}
+
+table tr:last-child td {
+	border-bottom: none;
+	font-weight: bold;
+}
+
+.cola details:last-of-type ul{
+	list-style-type: none;
+	padding-left: 25px;
+	margin-top: 2em;
+}
+
+.cola section:last-of-type {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.cola section:last-of-type p{
+	text-align: center;
+}
+
+.cola details:last-of-type{
+	margin-bottom: 4em;
+}
+
+.cola section:last-of-type a{
+	text-decoration: none;
+	color: black;
+	border: 1px solid #6f6f6f;
+	padding: 12px 30px;
+	border-radius: 4px;
+	box-shadow: 0 1.5px 1.5px 0 rgba(0, 0, 0, .08);
+	margin-bottom: 10em;
+}
+
+.cola article p{
+	margin: 2em 1em;
+	letter-spacing: -.15px;
+}
+
+@media (min-width: 768px){
+	.cola section:first-of-type{
+		display: flex;
+		flex-direction: row-reverse;
+	}
+
+	.cola h1{
+		margin-top: 2em;
+		text-align: left;
+	}
+
+	.cola section:first-of-type div > p:first-of-type {
+		text-align: left;
+		font-size: 20px;
+		margin-bottom: 20px;
+	}
+	
+	.cola section:first-of-type div > p:nth-of-type(2) {
+		text-align: left;
+		font-weight: bold;
+		font-size: 15px;
+	}
+	
+	.cola section:first-of-type div > p:nth-of-type(3) {
+		font-size: 14px;
+		line-height: 1.6;
+		margin: 1em 0;
+		text-align: left;
+	}
+
+	.cola section:first-of-type ul{
+		justify-content: left;
+	}
+
+
 }
 
 /***********************/
