--- a/styles/style.css
+++ b/styles/style.css
@@ -168,7 +168,7 @@ header nav div ul li details ul li:nth-child(n+2){
 	margin: 0;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 870px) {
 	#hamburger {
 	  display: block;
 	}
@@ -182,7 +182,7 @@ header nav div ul li details ul li:nth-child(n+2){
 	}
 }
 
-@media (min-width: 768px){
+@media (min-width: 870px){
 	#hamburger, #close-menu {
 	  display: none;
 	}
@@ -417,13 +417,13 @@ main{
 	margin: 13px;
 }
 
-@media (max-width: 769px){
+@media (max-width: 870px){
 	.home ul li{
 		flex: 0 0 100%;
 	}
 }
 
-@media (min-width: 768px) {
+@media (min-width: 870px) {
 .home {
 	display: grid;
 	grid-template-columns: 1fr 1fr;
@@ -548,6 +548,7 @@ main{
 	position: relative;
 	margin: 8px 25px;
 	font-size: 18px;
+	cursor: pointer;
 	anchor-name: --summary;
 
 	&::marker {
@@ -696,7 +697,7 @@ table tr:last-child td {
 	letter-spacing: -.15px;
 }
 
-@media (min-width: 768px){
+@media (min-width: 870px){
 	.cola section:first-of-type{
 		display: flex;
 		flex-direction: row-reverse;
@@ -801,13 +802,14 @@ footer details[open] summary::after {
 footer summary{
 	margin: 8px 25px;
 	font-size: 18px;
+	cursor: pointer;
 }
 
 footer section{
 	display: flex;
 	justify-content: center;
 	padding: 1em 0 6em 0;
-	border-bottom: 1px solid rgba(0, 0, 0, .1);
+	border-bottom: 1px solid var(--color-border);
 }
 
 footer section:nth-of-type(2){
